--- a/index.html
+++ b/index.html
@@ -240,7 +240,36 @@
   /* 애니메이션은 시선을 너무 끌 수 있어 삭제하거나 아주 미세하게만 유지하는 것이 '무미건조' 원칙에 맞습니다. */
 </style>
 
+<div style="max-width: 900px; margin: 40px auto 10px; padding: 0 15px;">
+    <div style="background: #f8fafc; border: 1px solid #e2e8f0; border-radius: 6px; padding: 8px 15px; display: flex; align-items: center; gap: 10px;">
+        <span style="color: #64748b; font-size: 11px; font-weight: 800; text-transform: uppercase; background: #ffffff; border: 1px solid #e2e8f0; padding: 2px 6px; border-radius: 4px;">Update</span>
+        <span style="color: #475569; font-size: 12px; font-weight: 600;">Qualifying R3-R4 rescheduled due to weather conditions in San Antonio.</span>
+    </div>
+</div>
 
+<div style="max-width: 900px; margin: 0 auto 50px; padding: 0 15px;">
+    <a href="ncaa-stats.html" style="text-decoration: none; display: block;">
+        <div style="background: #ffffff; border: 1.5px solid #0c2340; border-radius: 12px; padding: 25px; transition: all 0.3s; box-shadow: 0 4px 15px rgba(0,0,0,0.03);">
+            <div style="display: flex; justify-content: space-between; align-items: flex-start;">
+                <div>
+                    <h2 style="margin: 0 0 8px 0; color: #0c2340; font-size: 18px; font-weight: 900; text-transform: uppercase; letter-spacing: 0.5px;">
+                        Current Status Update
+                    </h2>
+                    <p style="margin: 0; color: #64748b; font-size: 13px; line-height: 1.5;">
+                        Technical feedback on Oaks course conditions and team training status during the winter storm.
+                    </p>
+                </div>
+                <div style="color: #0c2340; font-size: 20px; font-weight: 300;">&rarr;</div>
+            </div>
+            
+            <div style="margin-top: 20px; display: flex; gap: 20px; border-top: 1px solid #f1f5f9; padding-top: 15px;">
+                <div style="font-size: 11px; color: #94a3b8; font-weight: 700;">DATE: <span style="color: #475569;">JAN 26, 2026</span></div>
+                <div style="font-size: 11px; color: #94a3b8; font-weight: 700;">LOCATION: <span style="color: #475569;">SAN ANTONIO, TX</span></div>
+                <div style="font-size: 11px; color: #94a3b8; font-weight: 700;">STATUS: <span style="color: #0c2340;">ACTIVE</span></div>
+            </div>
+        </div>
+    </a>
+</div>
 
     
     <div style="position: relative; z-index: 2;">
