--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
   
   <div style="position: relative; text-align: center; margin-bottom: 40px; padding: 20px 0; overflow: hidden;">
     <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); font-size: clamp(40px, 10vw, 80px); font-weight: 900; color: rgba(12, 35, 64, 0.04); white-space: nowrap; z-index: 1; pointer-events: none; letter-spacing: -2px;">
-      ELITE PERFORMANCE
+      OFFICIAL WEBSITE
     </div>
 
 
