--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -169,7 +169,11 @@
   </script>
 
 
-
+<div style="max-width: 900px; margin: 20px auto; padding: 0 15px; text-align: right;">
+    <a href="fall-2025-archive.html" style="text-decoration: none; font-size: 11px; color: #94a3b8; font-weight: 700; border: 1.5px solid #e2e8f0; padding: 6px 15px; border-radius: 4px; display: inline-flex; align-items: center; gap: 6px;">
+        <span>📁</span> FALL 2025 SEASON ARCHIVE
+    </a>
+</div>
 
   
   
