--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -946,6 +946,13 @@
 
 <div class="analysis-section" style="max-width: 900px; margin: 0 auto 50px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   
+  <div style="margin-bottom: 15px; display: flex; justify-content: flex-end;">
+    <a href="fall-2025-archive.html" style="text-decoration: none; font-size: 13px; color: #806600; font-weight: 800; border: 2px solid #806600; padding: 10px 20px; border-radius: 12px; display: inline-flex; align-items: center; gap: 10px; background: #ffffff; transition: all 0.3s ease; box-shadow: 0 4px 12px rgba(128, 102, 0, 0.1); letter-spacing: 0.5px;">
+      <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z"></path></svg>
+      VIEW FALL 2025 SEASON ARCHIVE
+    </a>
+  </div>
+  
   <div style="margin-bottom: 40px; border: 1px solid #e2e8f0; border-radius: 20px; padding: 35px 30px; background: #ffffff; box-shadow: 0 15px 35px rgba(0,0,0,0.06); overflow: hidden;">
     
     <div style="border-bottom: 2px solid #f1f1f1; padding-bottom: 20px; margin-bottom: 25px;">
@@ -967,6 +974,10 @@
         Analysis of technical stability and scoring consistency will be updated following the completion of the inaugural Spring tournaments. Current focus remains on <b>stabilizing ball striking</b> and <b>optimizing short-game efficiency</b> under competitive conditions.
       </p>
     </div>
+    
+    </div>
+</div>
+  
 
     <div style="background: #f8fafc; padding: 25px; border-left: 6px solid #2b6cb0; border-radius: 8px; box-shadow: 0 4px 15px rgba(0,0,0,0.03); margin-bottom: 20px; border: 1px solid #e2e8f0; border-left-width: 6px;">
       <h4 style="margin: 0 0 12px 0; color: #2b6cb0; font-size: 16px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
