--- a/fall-2025-archive.html
+++ b/fall-2025-archive.html
@@ -172,7 +172,7 @@
   <div style="max-width: 900px; margin: 20px auto 0; padding: 0 15px; text-align: left;">
     <a href="ncaa-stats.html" style="text-decoration: none; font-size: 13px; color: #ffffff; font-weight: 800; background: #0c2340; border: none; padding: 12px 22px; border-radius: 12px; display: inline-flex; align-items: center; gap: 10px; transition: all 0.3s ease; box-shadow: 0 4px 15px rgba(12, 35, 64, 0.2); letter-spacing: 0.5px;">
         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"><line x1="19" y1="12" x2="5" y2="12"></line><polyline points="12 19 5 12 12 5"></polyline></svg>
-        RETURN TO LIVE SPRING 2026 STATS
+        RETURN TO CURRENT SPRING 2026 STATS
     </a>
 </div>
 
