--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -470,15 +470,15 @@
                 </p>
             </div>
 
-            <div style="background: #f8fafc; padding: 18px; border-radius: 8px; border: 1px solid #e2e8f0;">
-                <div style="display: flex; align-items: center; gap: 8px; margin-bottom: 8px;">
-                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M23 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path></svg>
-                    <span style="font-weight: 800; color: #0c2340; font-size: 13px; text-transform: uppercase;">Performance Maintenance</span>
-                </div>
-                <p style="margin: 0; font-size: 14px; color: #475569; line-height: 1.6;">
-                    Despite extreme weather conditions and sub-zero temperatures (approx. -8°C), <strong>Joshua has resumed focused training at the team facility, TPC San Antonio (Jan. 26)</strong>. By utilizing indoor resources and the PGA Superstore (Trackman), he is prioritizing ball-striking consistency and physical readiness to ensure a seamless transition to the Spring season opener in Mexico.
-                </p>
-            </div>
+<div style="background: #f8fafc; padding: 18px; border-radius: 8px; border: 1px solid #e2e8f0;">
+    <div style="display: flex; align-items: center; gap: 8px; margin-bottom: 8px;">
+        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M23 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path></svg>
+        <span style="font-weight: 800; color: #0c2340; font-size: 13px; text-transform: uppercase;">Performance Maintenance</span>
+    </div>
+    <p style="margin: 0; font-size: 14px; color: #475569; line-height: 1.6;">
+        Despite extreme weather and sub-zero temperatures, <strong>Joshua has resumed his training schedule at TPC San Antonio (Jan. 26)</strong> to maintain technical feel. This follows recent collaborative indoor sessions and Trackman iron work at the PGA Superstore with teammates. The focus remains on stabilizing ball-striking consistency for a seamless transition to the Spring opener in Mexico.
+    </p>
+</div>
 
             <div style="background: #f8fafc; padding: 18px; border-radius: 8px; border: 1px solid #e2e8f0;">
                 <div style="display: flex; align-items: center; gap: 8px; margin-bottom: 8px;">
