--- a/fall-2025-archive.html
+++ b/fall-2025-archive.html
@@ -169,12 +169,30 @@
   </script>
 
 
-  <div style="max-width: 900px; margin: 20px auto 0; padding: 0 15px; text-align: left;">
-    <a href="ncaa-stats.html" style="text-decoration: none; font-size: 13px; color: #ffffff; font-weight: 800; background: #0c2340; border: none; padding: 12px 22px; border-radius: 12px; display: inline-flex; align-items: center; gap: 10px; transition: all 0.3s ease; box-shadow: 0 4px 15px rgba(12, 35, 64, 0.2); letter-spacing: 0.5px;">
-        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"><line x1="19" y1="12" x2="5" y2="12"></line><polyline points="12 19 5 12 12 5"></polyline></svg>
+<div class="return-btn-section" style="max-width: 900px; margin: 15px auto 0; padding: 0 15px; box-sizing: border-box;">
+  
+  <style>
+    /* 모바일 전용 스타일 */
+    @media (max-width: 600px) {
+      .return-btn-container {
+        justify-content: center !important; /* 모바일에서 중앙 정렬 */
+      }
+      .return-link {
+        padding: 8px 16px !important; /* 모바일에서 더 슬림하게 */
+        font-size: 11px !important;
+      }
+    }
+  </style>
+
+  <div class="return-btn-container" style="display: flex; justify-content: flex-start;">
+    <a href="ncaa-stats.html" class="return-link" style="text-decoration: none; font-size: 12px; color: #ffffff; font-weight: 800; background: #0c2340; border: none; padding: 10px 18px; border-radius: 10px; display: inline-flex; align-items: center; gap: 8px; transition: all 0.3s ease; box-shadow: 0 4px 12px rgba(12, 35, 64, 0.15); letter-spacing: 0.5px;">
+        <svg width="15" height="15" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"><line x1="19" y1="12" x2="5" y2="12"></line><polyline points="12 19 5 12 12 5"></polyline></svg>
         RETURN TO CURRENT SPRING 2026 STATS
     </a>
+  </div>
 </div>
+
+  
 
 <div class="ncaa-hero-section" style="font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; width: 100%; max-width: 900px; margin: 0 auto 50px; padding: 0 15px; box-sizing: border-box;">
   
