--- a/index.html
+++ b/index.html
@@ -213,8 +213,11 @@
       <span style="background: #94a3b8; color: white; padding: 3px 10px; border-radius: 4px; font-size: 9px; font-weight: 800; letter-spacing: 0.5px; text-transform: uppercase;">
         Rescheduled
       </span>
-      <div style="color: #0c2340; font-weight: 700; font-size: 13px;">
-        Compadres Collegiate Qualifying (Oaks)
+      <div style="display: flex; align-items: center; gap: 6px;">
+        <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect><line x1="16" y1="2" x2="16" y2="6"></line><line x1="8" y1="2" x2="8" y2="6"></line><line x1="3" y1="10" x2="21" y2="10"></line></svg>
+        <div style="color: #0c2340; font-weight: 700; font-size: 13px;">
+          Compadres Collegiate Qualifying (Oaks)
+        </div>
       </div>
     </div>
 
@@ -226,7 +229,10 @@
       <div style="width: 1px; height: 20px; background: #e2e8f0;"></div>
       <div style="text-align: left;">
         <span style="display: block; font-size: 8px; color: #94a3b8; font-weight: 700; text-transform: uppercase;">POS</span>
-        <span style="font-size: 14px; font-weight: 800; color: #0c2340;">1</span>
+        <div style="display: flex; align-items: center; gap: 4px;">
+          <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"></circle><circle cx="12" cy="12" r="3"></circle></svg>
+          <span style="font-size: 14px; font-weight: 800; color: #0c2340;">1</span>
+        </div>
       </div>
     </div>
 
