--- a/index.html
+++ b/index.html
@@ -210,7 +210,8 @@
   <div style="background: #ffffff; border: 1.5px solid #0c2340; border-radius: 8px; padding: 12px 18px; display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; gap: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.05);">
     
     <div style="display: flex; align-items: center; gap: 10px;">
-      <span style="background: #94a3b8; color: white; padding: 3px 10px; border-radius: 4px; font-size: 9px; font-weight: 800; letter-spacing: 0.5px; text-transform: uppercase;">
+      <span style="background: #94a3b8; color: white; padding: 3px 10px; border-radius: 4px; font-size: 9px; font-weight: 800; letter-spacing: 0.5px; text-transform: uppercase; display: flex; align-items: center; gap: 5px;">
+        <span style="width: 6px; height: 6px; background: white; border-radius: 50%; animation: pulse 1.5s infinite;"></span>
         Rescheduled
       </span>
       <div style="display: flex; align-items: center; gap: 6px;">
@@ -243,8 +244,14 @@
 </div>
 
 <style>
-  /* 애니메이션은 시선을 너무 끌 수 있어 삭제하거나 아주 미세하게만 유지하는 것이 '무미건조' 원칙에 맞습니다. */
+  @keyframes pulse {
+    0% { opacity: 1; transform: scale(1); }
+    50% { opacity: 0.3; transform: scale(0.8); }
+    100% { opacity: 1; transform: scale(1); }
+  }
 </style>
+
+    
 
 <div style="max-width: 900px; margin: 40px auto 10px; padding: 0 15px;">
     <div style="background: #f8fafc; border: 1px solid #e2e8f0; border-radius: 6px; padding: 8px 15px; display: flex; align-items: center; gap: 10px;">
