--- a/index.html
+++ b/index.html
@@ -341,44 +341,64 @@
   </div>
 </div>
 
-    <div class="insight-section" style="max-width: 900px; margin: 0 auto 40px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+   <div class="insight-section" style="max-width: 900px; margin: 0 auto 40px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   
   <div style="background: #111; border-radius: 25px; padding: 40px 30px; color: white; position: relative; box-shadow: 0 20px 40px rgba(0,0,0,0.3); overflow: hidden;">
     
     <div style="position: absolute; bottom: -20px; right: -10px; font-size: 120px; color: rgba(201,138,46,0.05); pointer-events: none; transform: rotate(-15deg);">
-      <i class="fas fa-chart-line"></i>
+      <svg width="120" height="120" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"><path d="M21.21 15.89A10 10 0 1 1 8 2.83"></path><path d="M22 12A10 10 0 0 0 12 2v10z"></path></svg>
     </div>
 
-    <div style="display: flex; align-items: center; margin-bottom: 25px; position: relative; z-index: 2;">
-      <div style="background: rgba(201,138,46,0.15); width: 50px; height: 50px; border-radius: 14px; display: flex; align-items: center; justify-content: center; margin-right: 18px; border: 1px solid rgba(201,138,46,0.4);">
-        <span style="font-size: 24px;">📊</span>
+    <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 25px; position: relative; z-index: 2;">
+      <div style="display: flex; align-items: center;">
+        <div style="background: rgba(201,138,46,0.15); width: 50px; height: 50px; border-radius: 14px; display: flex; align-items: center; justify-content: center; margin-right: 18px; border: 1px solid rgba(201,138,46,0.4);">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#c98a2e" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="20" x2="18" y2="10"></line><line x1="12" y1="20" x2="12" y2="4"></line><line x1="6" y1="20" x2="6" y2="14"></line></svg>
+        </div>
+        <h3 style="font-size: 24px; color: #c98a2e; margin: 0; font-weight: 800; letter-spacing: -0.5px;">Beyond the Scorecard</h3>
       </div>
-      <h3 style="font-size: 24px; color: #c98a2e; margin: 0; font-weight: 800; letter-spacing: -0.5px;">Beyond the Scorecard</h3>
+      <span style="display: flex; align-items: center; gap: 6px; font-size: 10px; font-weight: 800; color: #27ae60; background: rgba(39,174,96,0.1); padding: 4px 12px; border-radius: 50px; border: 1px solid rgba(39,174,96,0.3);">
+        <span style="width: 6px; height: 6px; background: #27ae60; border-radius: 50%; animation: pulse 1.5s infinite;"></span>
+        CURRENT FOCUS
+      </span>
     </div>
 
-    <div style="font-size: 16px; line-height: 1.8; color: #efefef; position: relative; z-index: 2;">
-      <div style="font-style: italic; border-left: 4px solid #c98a2e; padding-left: 25px; color: #fff; text-align: justify; word-break: keep-all;">
-        <p style="margin: 0 0 20px 0; color: #c98a2e; font-weight: 700; font-style: normal; font-size: 18px; letter-spacing: 0.5px;">Performance Review & Strategic Focus</p>
+    <div style="font-size: 15px; line-height: 1.8; color: #efefef; position: relative; z-index: 2;">
+      <div style="border-left: 4px solid #c98a2e; padding-left: 25px; text-align: justify; word-break: keep-all;">
+        <p style="margin: 0 0 15px 0; color: #c98a2e; font-weight: 700; font-size: 18px; letter-spacing: 0.5px;">Winter Preparation & Spring Outlook</p>
         
-        <p style="margin-bottom: 20px;">
-          The Patriot All-America provided a clear benchmark against one of the strongest amateur fields in the country. Following the event, Joshua conducted a technical review, which identified <strong>long-iron precision</strong> as a key area requiring immediate improvement to compete consistently at the NCAA level.
+        <p style="margin-bottom: 15px;">
+          January training was exclusively dedicated to <strong>tightening long-iron dispersion</strong> and increasing <strong>short-game consistency</strong>. This technical block aimed to stabilize mid-to-long range scoring opportunities.
         </p>
 
-        <p style="margin-bottom: 20px;">
-          In coordination with the UTSA coaching staff, a short-term adjustment was approved to prioritize an <strong>intensive training block during January</strong>. This decision was made with a single objective: to return fully prepared for qualifying rounds and contribute more effectively to the team’s performance during the Spring season.
+        <p style="margin-bottom: 15px;">
+          Initial performance during the Jan 22-23 qualifying rounds (R1-R2) demonstrated improved ball-striking stability under competitive pressure. Technical refinement remains ongoing to maintain this consistency across all four rounds.
         </p>
 
-        <p style="margin-bottom: 0;">
-          Joshua is grateful to the UTSA staff for their trust and collaboration, and he remains fully committed to translating this focused work into measurable results that elevate the team’s standing.
+        <p style="margin-bottom: 25px; color: #fff; font-weight: 600;">
+          The objective for the Spring season opener is singular: to secure a top-tier position on the team leaderboard and contribute to UTSA’s overall standing.
         </p>
       </div>
     </div>
 
-    <div style="text-align: right; margin-top: 35px; font-size: 12px; color: #555; letter-spacing: 1.5px; font-weight: 700; position: relative; z-index: 2;">
-      LAST UPDATED: JAN 2026
+    <details style="position: relative; z-index: 3; margin-top: 20px;">
+      <summary style="cursor: pointer; color: #94a3b8; font-size: 12px; font-weight: 700; list-style: none; display: flex; align-items: center; gap: 5px; text-transform: uppercase; letter-spacing: 1px;">
+        <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"><polyline points="6 9 12 15 18 9"></polyline></svg>
+        View Fall 2025 Analysis (Archive)
+      </summary>
+      <div style="margin-top: 15px; padding: 20px; background: rgba(255,255,255,0.03); border-radius: 12px; font-size: 14px; color: #94a3b8; border: 1px dashed rgba(255,255,255,0.1);">
+        <p style="margin-top: 0;"><strong>Fall Review:</strong> The Patriot All-America served as a benchmark against elite competition. Post-event analysis identified NCAA-level long-iron precision as the primary area for immediate technical adjustment.</p>
+        <p style="margin-bottom: 0;">In collaboration with UTSA staff, the January intensive block was approved to prioritize long-term performance gains over short-term tournament entries.</p>
+      </div>
+    </details>
+
+    <div style="text-align: right; margin-top: 30px; font-size: 11px; color: #444; letter-spacing: 1px; font-weight: 700; position: relative; z-index: 2;">
+      LAST UPDATED: JAN 26, 2026
     </div>
   </div>
 </div>
+
+
+  
 
     <div class="intro-section" style="max-width: 900px; margin: 0 auto 40px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   
