--- a/index.html
+++ b/index.html
@@ -341,61 +341,133 @@
   </div>
 </div>
 
-   <div class="insight-section" style="max-width: 900px; margin: 0 auto 40px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+  <div class="insight-section" style="max-width: 900px; margin: 0 auto 40px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   
-  <div style="background: #111; border-radius: 25px; padding: 40px 30px; color: white; position: relative; box-shadow: 0 20px 40px rgba(0,0,0,0.3); overflow: hidden;">
+  <input type="checkbox" id="card-toggle" style="display: none;">
+
+  <style>
+    /* 카드 컨테이너 설정 */
+    .insight-card-wrapper {
+      position: relative;
+      width: 100%;
+      min-height: 480px; /* 카드 높이 유지 */
+      perspective: 1000px;
+    }
+    .insight-card {
+      background: #111;
+      border-radius: 25px;
+      padding: 40px 30px;
+      color: white;
+      box-shadow: 0 20px 40px rgba(0,0,0,0.3);
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      backface-visibility: hidden;
+      transition: all 0.6s cubic-bezier(0.4, 0, 0.2, 1);
+      box-sizing: border-box;
+      overflow: hidden;
+    }
+    /* 초기 상태: 현재 카드는 앞면, 가을 카드는 뒷면 */
+    .card-current { transform: rotateY(0deg); z-index: 2; }
+    .card-archive { transform: rotateY(180deg); z-index: 1; }
+
+    /* 체크 시 카드 뒤집기 */
+    #card-toggle:checked ~ .insight-card-wrapper .card-current { transform: rotateY(-180deg); z-index: 1; }
+    #card-toggle:checked ~ .insight-card-wrapper .card-archive { transform: rotateY(0deg); z-index: 2; }
+
+    /* 화살표 버튼 스타일 */
+    .toggle-btn {
+      cursor: pointer;
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+      color: #94a3b8;
+      font-size: 12px;
+      font-weight: 800;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      padding: 8px 16px;
+      border: 1.2px solid rgba(148, 163, 184, 0.3);
+      border-radius: 50px;
+      transition: all 0.2s;
+      margin-top: 20px;
+    }
+    .toggle-btn:hover {
+      background: rgba(201,138,46,0.1);
+      color: #c98a2e;
+      border-color: #c98a2e;
+    }
+    @keyframes pulse {
+      0% { opacity: 1; transform: scale(1); }
+      50% { opacity: 0.3; transform: scale(0.8); }
+      100% { opacity: 1; transform: scale(1); }
+    }
+  </style>
+
+  <div class="insight-card-wrapper">
     
-    <div style="position: absolute; bottom: -20px; right: -10px; font-size: 120px; color: rgba(201,138,46,0.05); pointer-events: none; transform: rotate(-15deg);">
-      <svg width="120" height="120" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"><path d="M21.21 15.89A10 10 0 1 1 8 2.83"></path><path d="M22 12A10 10 0 0 0 12 2v10z"></path></svg>
-    </div>
+    <div class="insight-card card-current">
+      <div style="position: absolute; bottom: -20px; right: -10px; color: rgba(201,138,46,0.05); pointer-events: none; transform: rotate(-15deg);">
+        <svg width="120" height="120" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1"><path d="M21.21 15.89A10 10 0 1 1 8 2.83"></path><path d="M22 12A10 10 0 0 0 12 2v10z"></path></svg>
+      </div>
 
-    <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 25px; position: relative; z-index: 2;">
-      <div style="display: flex; align-items: center;">
-        <div style="background: rgba(201,138,46,0.15); width: 50px; height: 50px; border-radius: 14px; display: flex; align-items: center; justify-content: center; margin-right: 18px; border: 1px solid rgba(201,138,46,0.4);">
-          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#c98a2e" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="20" x2="18" y2="10"></line><line x1="12" y1="20" x2="12" y2="4"></line><line x1="6" y1="20" x2="6" y2="14"></line></svg>
+      <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 25px;">
+        <div style="display: flex; align-items: center;">
+          <div style="background: rgba(201,138,46,0.15); width: 50px; height: 50px; border-radius: 14px; display: flex; align-items: center; justify-content: center; margin-right: 18px; border: 1px solid rgba(201,138,46,0.4);">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#c98a2e" stroke-width="2"><line x1="18" y1="20" x2="18" y2="10"></line><line x1="12" y1="20" x2="12" y2="4"></line><line x1="6" y1="20" x2="6" y2="14"></line></svg>
+          </div>
+          <h3 style="font-size: 24px; color: #c98a2e; margin: 0; font-weight: 800;">Beyond the Scorecard</h3>
         </div>
-        <h3 style="font-size: 24px; color: #c98a2e; margin: 0; font-weight: 800; letter-spacing: -0.5px;">Beyond the Scorecard</h3>
+        <span style="display: flex; align-items: center; gap: 6px; font-size: 10px; font-weight: 800; color: #27ae60; background: rgba(39,174,96,0.1); padding: 4px 12px; border-radius: 50px; border: 1px solid rgba(39,174,96,0.3);">
+          <span style="width: 6px; height: 6px; background: #27ae60; border-radius: 50%; animation: pulse 1.5s infinite;"></span>
+          CURRENT FOCUS
+        </span>
       </div>
-      <span style="display: flex; align-items: center; gap: 6px; font-size: 10px; font-weight: 800; color: #27ae60; background: rgba(39,174,96,0.1); padding: 4px 12px; border-radius: 50px; border: 1px solid rgba(39,174,96,0.3);">
-        <span style="width: 6px; height: 6px; background: #27ae60; border-radius: 50%; animation: pulse 1.5s infinite;"></span>
-        CURRENT FOCUS
-      </span>
+
+      <div style="font-size: 15px; line-height: 1.8; color: #efefef;">
+        <div style="border-left: 4px solid #c98a2e; padding-left: 25px;">
+          <p style="margin: 0 0 15px 0; color: #c98a2e; font-weight: 700; font-size: 18px;">Winter Preparation & Spring Outlook</p>
+          <p style="margin-bottom: 15px;">January training was exclusively dedicated to <strong>tightening long-iron dispersion</strong> and increasing <strong>short-game consistency</strong>. This technical block aimed to stabilize mid-to-long range scoring opportunities.</p>
+          <p style="margin-bottom: 15px;">Initial performance during the Jan 22-23 qualifying rounds (R1-R2) demonstrated improved ball-striking stability under competitive pressure. Technical refinement remains ongoing to maintain this consistency across all four rounds.</p>
+          <p style="margin-bottom: 25px; color: #fff; font-weight: 600;">The objective for the Spring season opener is singular: to secure a top-tier position on the team leaderboard and contribute to UTSA’s overall standing.</p>
+        </div>
+      </div>
+
+      <label for="card-toggle" class="toggle-btn">
+        VIEW FALL 2025 ANALYSIS (ARCHIVE) <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><polyline points="9 18 15 12 9 6"></polyline></svg>
+      </label>
+
+      <div style="text-align: right; margin-top: 20px; font-size: 11px; color: #444; font-weight: 700;">LAST UPDATED: JAN 26, 2026</div>
     </div>
 
-    <div style="font-size: 15px; line-height: 1.8; color: #efefef; position: relative; z-index: 2;">
-      <div style="border-left: 4px solid #c98a2e; padding-left: 25px; text-align: justify; word-break: keep-all;">
-        <p style="margin: 0 0 15px 0; color: #c98a2e; font-weight: 700; font-size: 18px; letter-spacing: 0.5px;">Winter Preparation & Spring Outlook</p>
-        
-        <p style="margin-bottom: 15px;">
-          January training was exclusively dedicated to <strong>tightening long-iron dispersion</strong> and increasing <strong>short-game consistency</strong>. This technical block aimed to stabilize mid-to-long range scoring opportunities.
-        </p>
-
-        <p style="margin-bottom: 15px;">
-          Initial performance during the Jan 22-23 qualifying rounds (R1-R2) demonstrated improved ball-striking stability under competitive pressure. Technical refinement remains ongoing to maintain this consistency across all four rounds.
-        </p>
-
-        <p style="margin-bottom: 25px; color: #fff; font-weight: 600;">
-          The objective for the Spring season opener is singular: to secure a top-tier position on the team leaderboard and contribute to UTSA’s overall standing.
-        </p>
+    <div class="insight-card card-archive">
+      <div style="display: flex; align-items: center; margin-bottom: 25px;">
+        <div style="background: rgba(148, 163, 184, 0.1); width: 50px; height: 50px; border-radius: 14px; display: flex; align-items: center; justify-content: center; margin-right: 18px; border: 1px solid rgba(148, 163, 184, 0.3);">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#94a3b8" stroke-width="2"><path d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z"></path></svg>
+        </div>
+        <h3 style="font-size: 24px; color: #94a3b8; margin: 0; font-weight: 800;">Performance Archive</h3>
       </div>
+
+      <div style="font-size: 15px; line-height: 1.8; color: #efefef;">
+        <div style="border-left: 4px solid #94a3b8; padding-left: 25px; font-style: italic;">
+          <p style="margin: 0 0 20px 0; color: #fff; font-weight: 700; font-style: normal; font-size: 18px;">Fall Review & Strategic Focus (Original)</p>
+          <p style="margin-bottom: 20px;">The Patriot All-America provided a clear benchmark against one of the strongest amateur fields in the country. Following the event, Joshua conducted a technical review, which identified <strong>long-iron precision</strong> as a key area requiring immediate improvement to compete consistently at the NCAA level.</p>
+          <p style="margin-bottom: 20px;">In coordination with the UTSA coaching staff, a short-term adjustment was approved to prioritize an <strong>intensive training block during January</strong>. This decision was made with a single objective: to return fully prepared for qualifying rounds and contribute more effectively to the team’s performance during the Spring season.</p>
+          <p style="margin-bottom: 20px;">Joshua is grateful to the UTSA staff for their trust and collaboration, and he remains fully committed to translating this focused work into measurable results that elevate the team’s standing.</p>
+        </div>
+      </div>
+
+      <label for="card-toggle" class="toggle-btn">
+        <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><polyline points="15 18 9 12 15 6"></polyline></svg> BACK TO CURRENT FOCUS
+      </label>
     </div>
 
-    <details style="position: relative; z-index: 3; margin-top: 20px;">
-      <summary style="cursor: pointer; color: #94a3b8; font-size: 12px; font-weight: 700; list-style: none; display: flex; align-items: center; gap: 5px; text-transform: uppercase; letter-spacing: 1px;">
-        <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"><polyline points="6 9 12 15 18 9"></polyline></svg>
-        View Fall 2025 Analysis (Archive)
-      </summary>
-      <div style="margin-top: 15px; padding: 20px; background: rgba(255,255,255,0.03); border-radius: 12px; font-size: 14px; color: #94a3b8; border: 1px dashed rgba(255,255,255,0.1);">
-        <p style="margin-top: 0;"><strong>Fall Review:</strong> The Patriot All-America served as a benchmark against elite competition. Post-event analysis identified NCAA-level long-iron precision as the primary area for immediate technical adjustment.</p>
-        <p style="margin-bottom: 0;">In collaboration with UTSA staff, the January intensive block was approved to prioritize long-term performance gains over short-term tournament entries.</p>
-      </div>
-    </details>
-
-    <div style="text-align: right; margin-top: 30px; font-size: 11px; color: #444; letter-spacing: 1px; font-weight: 700; position: relative; z-index: 2;">
-      LAST UPDATED: JAN 26, 2026
-    </div>
   </div>
 </div>
+
+
+
+  
 
 
   
