--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -431,7 +431,7 @@
             Status Report: Qualifying & Schedule Update
         </h3>
         <p style="font-size: 14px; color: #64748b; line-height: 1.5; margin: 0 auto 20px auto; max-width: 450px;">
-            Technical feedback from R1-R2 and routine activity log during the winter storm in San Antonio.
+            Technical feedback from R1-R2 and current team activities during the winter storm in San Antonio.
         </p>
         
         <button type="button" 
@@ -459,18 +459,18 @@
                         <span style="font-weight: 800; color: #0c2340; font-size: 13px; text-transform: uppercase;">Qualifying Feedback (R1-R2)</span>
                     </div>
                     <p style="margin: 0; font-size: 14px; color: #475569; line-height: 1.6;">
-                        <strong>Ball-Striking:</strong> Remained consistent through the first two rounds under moderate wind.<br>
-                        <strong>Course Conditions:</strong> The Oaks course is in tournament-prep mode (Valero Texas Open); greenside and putting surfaces are increasingly challenging.
+                        <strong>Ball-Striking:</strong> Remained consistent through R1-R2. Moderate wind levels provided manageable playing conditions.<br>
+                        <strong>Course Conditions:</strong> The Oaks course is currently being prepared for the Valero Texas Open, resulting in significant greenside and putting surface challenges.
                     </p>
                 </div>
 
                 <div style="background: #f8fafc; padding: 18px; border-radius: 8px; border: 1px solid #e2e8f0;">
                     <div style="display: flex; align-items: center; gap: 8px; margin-bottom: 8px;">
                         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M23 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path></svg>
-                        <span style="font-weight: 800; color: #0c2340; font-size: 13px; text-transform: uppercase;">Training Log</span>
+                        <span style="font-weight: 800; color: #0c2340; font-size: 13px; text-transform: uppercase;">Team & Training Activity</span>
                     </div>
                     <p style="margin: 0; font-size: 14px; color: #475569; line-height: 1.6;">
-                        <strong>Jan. 26 Update:</strong> Back at <strong>TPC San Antonio</strong> for outdoor technical work despite the sub-zero temps. Follows recent collaborative indoor sessions and Trackman iron drills at <strong>PGA Superstore</strong> with teammates.
+                        With campus facilities closed, Joshua and teammates are collaborating to maintain performance rhythms. Group sessions at PGA Superstore (Trackman iron work) and indoor drills at the residence are being utilized to stay ready collectively.
                     </p>
                 </div>
 
@@ -480,7 +480,7 @@
                         <span style="font-weight: 800; color: #0c2340; font-size: 13px; text-transform: uppercase;">Academic & Next Steps</span>
                     </div>
                     <p style="margin: 0; font-size: 14px; color: #475569; line-height: 1.6;">
-                        All coursework is up to date. Qualifying R3-R4 rescheduled for Wed/Thu (tentative). Friday departure for Cancun remains on track.
+                        All upcoming academic assignments have been completed. Qualifying R3-R4 rescheduled for Wed/Thu (tentative). Friday departure for Cancun (Spring Opener) remains as scheduled.
                     </p>
                 </div>
             </div>
