--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1187,7 +1187,7 @@
           Strategic Course Management
         </h4>
         <p style="margin: 0; color: #4a5568; text-align: justify; word-break: keep-all;">
-          <b>Bryan Gathright</b>의 기술 코칭을 실전 의사결정에 통합함. 비강제적 실책(Unforced errors) 최소화 및 파5 홀에서의 버디 전환율(Birdie conversion rates) 최적화에 주력함.
+          Integration of <b>Bryan Gathright's</b> technical coaching into real-time decision making. Focus is placed on minimizing unforced errors, optimizing <b>birdie conversion rates</b> and <b>par save efficiency</b> on par-4 holes.
         </p>
       </div>
 
@@ -1197,7 +1197,7 @@
           Scoring Availability & Contribution
         </h4>
         <p style="margin: 0; color: #4a5568; text-align: justify; word-break: keep-all;">
-          토너먼트 전 라운드에서 <b>100% Counting Score rate</b> 달성을 기술적 기본 목표로 설정함. 팀 합계 점수 산출 시 고정적인 기여 데이터 확보를 최우선함.
+          Targeting a <b>100% Counting Score rate</b> across all tournament rounds as a primary technical objective. Prioritizing consistent data contribution to the overall UTSA team score.
         </p>
       </div>
 
@@ -1207,7 +1207,7 @@
           Post-Event Performance Analytics
         </h4>
         <p style="margin: 0; color: #4a5568; text-align: justify; word-break: keep-all;">
-          춘계 시즌 첫 토너먼트 종료 후, 승률(Head-to-head win rates) 및 <b>Strokes Gained</b> 지표를 포함한 정밀 분석 보고서를 업데이트할 예정임.
+          Following the conclusion of the season opener, a comprehensive analysis of head-to-head win rates and <b>Strokes Gained</b> metrics will be updated to track seasonal progression.
         </p>
       </div>
     </div>
