--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1063,7 +1063,7 @@
           Spring Roster Security
         </h4>
         <p style="font-size: 14px; color: #4a5568; line-height: 1.7; margin: 0; text-align: justify;">
-          현재 트래블 스쿼드(Travel Squad) 선발전에 참여 중임. 2026 시즌 개막전 엔트리 내 상위권 포지션 유지를 위한 내부 경쟁 지표 관리 중.
+          Currently participating in Travel Squad qualifiers. Managing performance metrics to secure a stable position within the competitive lineup for the 2026 season opener.
         </p>
       </div>
 
@@ -1073,7 +1073,7 @@
           Performance Targets
         </h4>
         <p style="font-size: 14px; color: #4a5568; line-height: 1.7; margin: 0; text-align: justify;">
-          기술적 조정 및 전략적 코스 매니지먼트를 통한 <b>Scoring Average의 하향 안정화</b>를 최우선 목표로 설정함.
+          Prioritizing the stabilization of <b>Scoring Average</b> through precise technical adjustments and strategic course management protocols.
         </p>
       </div>
 
@@ -1083,7 +1083,7 @@
           Operational Consistency
         </h4>
         <p style="font-size: 14px; color: #4a5568; line-height: 1.7; margin: 0; text-align: justify;">
-          팀 합계 점수에 기여하는 <b>100% Counting Score rate</b> 유지를 통해 팀 내 기술적 신뢰도와 가용성을 강화함.
+          Maintaining a <b>100% Counting Score rate</b> to ensure reliable data contribution toward the UTSA team totals.
         </p>
       </div>
 
@@ -1093,7 +1093,7 @@
           Competitive Readiness
         </h4>
         <p style="font-size: 14px; color: #4a5568; line-height: 1.7; margin: 0; text-align: justify;">
-          춘계 토너먼트 시작과 동시에 라운드별 실시간 통계 및 퀄리파잉 데이터 업데이트 예정.
+          Real-time statistics and round-by-round qualifier data will be updated upon the commencement of Spring tournament play.
         </p>
       </div>
 
