--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1105,7 +1105,7 @@
 
     
 
-    <<div style="font-size: 15px; color: #334155; line-height: 1.8; border-top: 1px dashed #e2e8f0; padding-top: 25px;">
+    <div style="font-size: 15px; color: #334155; line-height: 1.8; border-top: 1px dashed #e2e8f0; padding-top: 25px;">
       <div style="display: grid; gap: 16px;">
         
         <div style="display: flex; align-items: flex-start; gap: 12px;">
