--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -262,7 +262,6 @@
     }
   </style>
 
-
 <div style="border-bottom: 2px solid #0c2340; padding-bottom: 20px; margin-bottom: 40px; text-align: center;">
     <h1 style="margin: 0; color: #0c2340; font-size: 26px; letter-spacing: 2px; font-weight: 900; text-transform: uppercase;">
       On-going Tournament
@@ -272,17 +271,17 @@
 <div class="live-event-card">
     <div style="padding: 20px 25px; display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; gap: 10px;">
       <div style="display: flex; align-items: center; gap: 12px;">
-        <span style="background: #f39c12; color: white; padding: 4px 14px; border-radius: 50px; font-size: 10px; font-weight: 900; letter-spacing: 1px; display: flex; align-items: center; gap: 6px;">
+        <span style="background: #94a3b8; color: white; padding: 4px 14px; border-radius: 50px; font-size: 10px; font-weight: 900; letter-spacing: 1px; display: flex; align-items: center; gap: 6px;">
           <span style="width: 8px; height: 8px; background: white; border-radius: 50%; animation: pulse 1.5s infinite;"></span>
           SCHEDULE DELAYED
         </span>
-        <h2 style="color: #f39c12; margin: 0; font-size: 22px; font-weight: 800;">Compadres Collegiate (UTRGV) Qualifying</h2>
+        <h2 style="color: #0c2340; margin: 0; font-size: 22px; font-weight: 800;">Compadres Collegiate (UTRGV) Qualifying</h2>
       </div>
       <div style="font-size: 12px; color: #95a5a6; font-weight: 600; text-transform: uppercase; letter-spacing: 1px;">Last Updated: Jan 26, 2026</div>
     </div>
 
-    <div style="margin: 0 25px 15px 25px; padding: 12px 15px; background: #fff9eb; border-left: 4px solid #f39c12; border-radius: 4px;">
-      <p style="margin: 0; font-size: 13px; color: #7e5109; font-weight: 700; line-height: 1.5;">
+    <div style="margin: 0 25px 15px 25px; padding: 12px 15px; background: #f8fafc; border-left: 4px solid #94a3b8; border-radius: 4px;">
+      <p style="margin: 0; font-size: 13px; color: #475569; font-weight: 700; line-height: 1.5;">
         ⚠️ NOTICE: Schedule adjusted to Wed/Thu due to winter storm and course closure. Rounds are subject to change based on weather conditions.
       </p>
     </div>
@@ -355,30 +354,30 @@
           </tr>
           <tr>
             <td class="col-left">
-              <div style="font-weight: 600; font-size: 13px; color: #f39c12;">Jan 28, 2026 (TBD)</div>
+              <div style="font-weight: 600; font-size: 13px; color: #94a3b8;">Jan 28, 2026 (TBD)</div>
               <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Round 3: The Canyons Course (Par 72)</div>
               <div style="font-size: 12px; color: #7f8c8d;">TPC San Antonio </div>
               <div class="mobile-status-bar">
-                <div class="ms-item" style="border:none;"><span class="ms-label">STATUS</span><span class="ms-value" style="color:#f39c12;">Delayed</span></div>
+                <div class="ms-item" style="border:none;"><span class="ms-label">STATUS</span><span class="ms-value" style="color:#94a3b8;">Delayed</span></div>
               </div>
             </td>
             <td class="hide-mobile" style="color: #bdc3c7;">-</td>
             <td class="hide-mobile" style="color: #bdc3c7;">-</td>
-            <td class="hide-mobile" style="font-weight: 700; color: #f39c12;">Delayed</td>
+            <td class="hide-mobile" style="font-weight: 700; color: #94a3b8;">Delayed</td>
             <td class="hide-mobile" style="color: #bdc3c7;">-</td>
           </tr>
           <tr>
             <td class="col-left">
-              <div style="font-weight: 600; font-size: 13px; color: #f39c12;">Jan 29, 2026 (TBD)</div>
+              <div style="font-weight: 600; font-size: 13px; color: #94a3b8;">Jan 29, 2026 (TBD)</div>
               <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Round 4: The Oaks Course (Par 72)</div>
               <div style="font-size: 12px; color: #7f8c8d;">TPC San Antonio </div>
               <div class="mobile-status-bar">
-                <div class="ms-item" style="border:none;"><span class="ms-label">STATUS</span><span class="ms-value" style="color:#f39c12;">Delayed</span></div>
+                <div class="ms-item" style="border:none;"><span class="ms-label">STATUS</span><span class="ms-value" style="color:#94a3b8;">Delayed</span></div>
               </div>
             </td>
             <td class="hide-mobile" style="color: #bdc3c7;">-</td>
             <td class="hide-mobile" style="color: #bdc3c7;">-</td>
-            <td class="hide-mobile" style="font-weight: 700; color: #f39c12;">Delayed</td>
+            <td class="hide-mobile" style="font-weight: 700; color: #94a3b8;">Delayed</td>
             <td class="hide-mobile" style="color: #bdc3c7;">-</td>
           </tr>
         </tbody>
