--- a/index.html
+++ b/index.html
@@ -206,26 +206,45 @@
     </div>
 
 
-<div style="max-width: 900px; margin: 0 auto 50px; padding: 0 15px; box-sizing: border-box;">
+<div style="max-width: 900px; margin: 0 auto 15px; padding: 0 15px; box-sizing: border-box;">
+  <div style="background: #ffffff; border: 1.5px solid #0c2340; border-radius: 8px; padding: 12px 18px; display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; gap: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.05);">
+    <div style="display: flex; align-items: center; gap: 10px;">
+      <span style="background: #94a3b8; color: white; padding: 3px 10px; border-radius: 4px; font-size: 9px; font-weight: 800; letter-spacing: 0.5px; text-transform: uppercase;">
+        Rescheduled
+      </span>
+      <div style="color: #0c2340; font-weight: 700; font-size: 13px;">
+        Compadres Collegiate Qualifying (Oaks)
+      </div>
+    </div>
+    <div style="display: flex; align-items: center; gap: 15px;">
+      <div style="text-align: left;">
+        <span style="display: block; font-size: 8px; color: #94a3b8; font-weight: 700; text-transform: uppercase;">R1-R2 Status</span>
+        <span style="font-size: 14px; font-weight: 800; color: #0c2340;">68-69 <span style="color: #64748b; font-size: 12px;">(-7)</span></span>
+      </div>
+      <div style="width: 1px; height: 20px; background: #e2e8f0;"></div>
+      <div style="text-align: left;">
+        <span style="display: block; font-size: 8px; color: #94a3b8; font-weight: 700; text-transform: uppercase;">POS</span>
+        <span style="font-size: 14px; font-weight: 800; color: #0c2340;">1</span>
+      </div>
+    </div>
+    <a href="ncaa-stats.html" style="text-decoration: none; color: #0c2340; font-size: 11px; font-weight: 800; border-bottom: 1.5px solid #0c2340; padding-bottom: 2px;">
+      VIEW STATUS UPDATE &rarr;
+    </a>
+  </div>
+</div>
+
+<div style="max-width: 900px; margin: 0 auto 50px; padding: 0 15px;">
     <a href="ncaa-stats.html" style="text-decoration: none; display: block;">
-        <div style="background: #f8fafc; border: 1px solid #e2e8f0; border-radius: 8px; padding: 15px 20px; display: flex; align-items: center; justify-content: space-between; transition: all 0.2s; box-shadow: 0 2px 8px rgba(0,0,0,0.02);">
-            
-            <div style="display: flex; align-items: center; gap: 15px;">
-                <span style="color: #64748b; font-size: 10px; font-weight: 800; text-transform: uppercase; background: #ffffff; border: 1px solid #e2e8f0; padding: 2px 8px; border-radius: 4px; white-space: nowrap;">
+        <div style="background: #f8fafc; border: 1px solid #e2e8f0; border-radius: 8px; padding: 15px 20px; display: flex; align-items: center; justify-content: space-between; box-shadow: 0 2px 8px rgba(0,0,0,0.02);">
+            <div style="display: flex; align-items: center; gap: 12px;">
+                <span style="color: #64748b; font-size: 10px; font-weight: 800; text-transform: uppercase; background: #ffffff; border: 1px solid #e2e8f0; padding: 2px 8px; border-radius: 4px;">
                     Update
                 </span>
-                
-                <div style="display: flex; flex-direction: column; gap: 2px;">
-                    <h2 style="margin: 0; color: #0c2340; font-size: 14px; font-weight: 800; line-height: 1.2;">
-                        Qualifying R3-R4 Schedule Adjustment
-                    </h2>
-                    <p style="margin: 0; color: #64748b; font-size: 12px; font-weight: 500;">
-                        Course conditions and training status update during the winter storm.
-                    </p>
-                </div>
+                <span style="color: #475569; font-size: 13px; font-weight: 600;">
+                    Qualifying R3-R4 rescheduled due to weather conditions. View technical feedback.
+                </span>
             </div>
-
-            <div style="color: #0c2340; font-size: 18px; font-weight: 300; padding-left: 10px;">&rarr;</div>
+            <div style="color: #0c2340; font-size: 18px; font-weight: 300;">&rarr;</div>
         </div>
     </a>
 </div>
