--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -414,7 +414,7 @@
   
 
 
-<div style="border-bottom: 2px solid #0c2340; padding-bottom: 20px; margin-top: 60px; margin-bottom: 40px; text-align: center;">
+<div id="current-focus" style="border-bottom: 2px solid #0c2340; padding-bottom: 20px; margin-top: 60px; margin-bottom: 40px; text-align: center;">
     <h1 style="margin: 0; color: #0c2340; font-size: 26px; letter-spacing: 2px; font-weight: 900; text-transform: uppercase;">
       Current Focus
     </h1>
