--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -414,10 +414,14 @@
   
 
 
-<div id="current-focus" style="border-bottom: 2px solid #0c2340; padding-bottom: 20px; margin-top: 60px; margin-bottom: 40px; text-align: center;">
-    <h1 style="margin: 0; color: #0c2340; font-size: 26px; letter-spacing: 2px; font-weight: 900; text-transform: uppercase;">
-      Current Focus
-    </h1>
+<div style="margin-top: 60px;">
+    <a id="current-focus" style="display: block; position: relative; top: -100px; visibility: hidden;"></a>
+    
+    <div style="border-bottom: 2px solid #0c2340; padding-bottom: 20px; margin-bottom: 40px; text-align: center;">
+        <h1 style="margin: 0; color: #0c2340; font-size: 26px; letter-spacing: 2px; font-weight: 900; text-transform: uppercase;">
+            Current Focus
+        </h1>
+    </div>
 </div>
 
 <div class="current-focus-card" style="margin-bottom: 40px; background: #ffffff; border-radius: 12px; box-shadow: 0 2px 15px rgba(0,0,0,0.05); border: 1px solid #edf2f7; overflow: hidden;">
