--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 
     
 <div style="max-width: 900px; margin: 0 auto 50px; padding: 0 15px; box-sizing: border-box;">
-    <a href="ncaa-stats.html#current-focus" style="text-decoration: none; display: block;">
+    <a href="./ncaa-stats.html#current-focus" style="text-decoration: none; display: block;">
         <div class="focus-container">
             
             <div class="focus-content">
