--- a/index.html
+++ b/index.html
@@ -411,7 +411,8 @@
 
   
 
-<div class="insight-section" style="max-width: 900px; margin: 0 auto 40px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+
+  <div class="insight-section" style="max-width: 900px; margin: 0 auto 40px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   
   <input type="checkbox" id="card-toggle" style="display: none;">
 
@@ -419,7 +420,6 @@
     .insight-card-wrapper {
       position: relative;
       width: 100%;
-      /* 데스크탑 기본 높이 */
       min-height: 580px; 
       perspective: 1000px;
     }
@@ -473,20 +473,12 @@
       100% { opacity: 1; transform: scale(1); }
     }
 
-    /* 📱 모바일 에러 수정: 화면이 좁아지면 카드 높이가 늘어나므로 부모 높이도 같이 조절 */
     @media (max-width: 768px) {
-      .insight-card-wrapper {
-        min-height: 750px; /* 모바일에서 텍스트가 밀려 내려오는 것을 고려해 높이 확보 */
-      }
-      .insight-card {
-        padding: 25px 20px; /* 모바일에서 내부 여백 살짝 조절 */
-      }
+      .insight-card-wrapper { min-height: 780px; }
+      .insight-card { padding: 25px 20px; }
     }
-    /* 아주 작은 기기 대응 */
     @media (max-width: 480px) {
-      .insight-card-wrapper {
-        min-height: 850px;
-      }
+      .insight-card-wrapper { min-height: 880px; }
     }
   </style>
 
@@ -511,7 +503,7 @@
           <p style="margin: 0 0 15px 0; color: #c98a2e; font-weight: 700; font-size: 17px;">Winter Preparation & Spring Outlook</p>
           <p style="margin-bottom: 15px;">January training was <strong>strategically focused</strong> on tightening long-iron dispersion and increasing short-game consistency. This technical block aimed to stabilize mid-to-long range scoring opportunities.</p>
           <p style="margin-bottom: 15px;">Initial performance during the Jan 22-23 qualifying rounds (R1-R2) demonstrated improved ball-striking stability under competitive pressure. Technical refinement remains ongoing to maintain this consistency across all four rounds.</p>
-          <p style="margin-bottom: 0; color: #fff; font-weight: 600;">The objective for the Spring season opener is singular: to secure a top-tier position on the team leaderboard and contribute to UTSA’s overall standing.</p>
+          <p style="margin-bottom: 0; color: #fff; font-weight: 600;">The objective for the Spring season is to maintain a high level of competitive readiness and consistently contribute to the team’s overall performance in every tournament.</p>
         </div>
       </div>
 
@@ -547,6 +539,8 @@
 
   </div>
 </div>
+
+  
 
 
 
