--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -446,9 +446,9 @@
 
     <div id="focus-detail-modal" 
         onclick="if(event.target == this) this.style.display='none'" 
-        style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); z-index: 9999; justify-content: center; align-items: center; padding: 20px; box-sizing: border-box; backdrop-filter: blur(4px);">
+        style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); z-index: 9999; justify-content: center; align-items: flex-start; padding: 40px 20px; box-sizing: border-box; backdrop-filter: blur(4px); overflow-y: auto;">
         
-        <div style="position: relative; max-width: 550px; width: 100%; max-height: 85vh; background: #ffffff; border-radius: 12px; padding: 30px; box-shadow: 0 20px 40px rgba(0,0,0,0.3); overflow-y: auto;">
+        <div style="position: relative; max-width: 550px; width: 100%; max-height: none; background: #ffffff; border-radius: 12px; padding: 30px; box-shadow: 0 20px 40px rgba(0,0,0,0.3); margin-bottom: 40px;">
             <div style="color: #94a3b8; text-align: right; font-size: 12px; margin-bottom: 15px; font-weight: 700; cursor: pointer;" onclick="document.getElementById('focus-detail-modal').style.display='none'">CLOSE [X]</div>
             
             <h3 style="color: #0c2340; margin: 0 0 20px 0; font-size: 20px; font-weight: 900; text-align: center; text-transform: uppercase; letter-spacing: 1px;">
