--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     <div style="display: flex; align-items: center; gap: 15px;">
       <div style="text-align: left;">
         <span style="display: block; font-size: 8px; color: #94a3b8; font-weight: 700; text-transform: uppercase;">R1-R2 Status</span>
-        <span style="font-size: 14px; font-weight: 800; color: #0c2340;">68-69 <span style="color: #64748b; font-size: 12px;">(-7)</span></span>
+        <span style="font-size: 14px; font-weight: 800; color: #e11d48;">68-69 <span style="color: #e11d48; font-size: 12px;">(-7)</span></span>
       </div>
       <div style="width: 1px; height: 20px; background: #e2e8f0;"></div>
       <div style="text-align: left;">
