--- a/fall-2025-archive.html
+++ b/fall-2025-archive.html
@@ -554,12 +554,11 @@
   </div>
 </div>
 
-  <div style="text-align: center; padding-top: 20px; margin-top: 40px; border-top: 1px solid #f1f1f1;">
-    <p style="font-size: 11px; color: #aaa; text-transform: uppercase; letter-spacing: 2px; line-height: 1.8;">
+ <div style="text-align: center; padding-top: 20px; margin-top: 40px; border-top: 1px solid #f1f1f1; clear: both;">
+    <p style="font-size: 11px; color: #aaa; text-transform: uppercase; letter-spacing: 2px; line-height: 1.8; margin-bottom: 0;">
       Performance Data<br>
       Official Credentials • Joshua Hong
     </p>
   </div>
 </div>
-
 
